--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <p>test två från min nya branch</p>
     <p>test 3 hej hej</p>
     <h1>ny ändring test 4</h1>
+
+    <h1>ändring igen för att se om stash följer med</h1>
 </body>
 </html>
